--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,6 @@
+body {
+
+}
 .logo-container {
     width: 126px;
     height: 38px;
@@ -36,6 +39,9 @@
 }
 .top-panel {
     padding-top: 35px;
+    position: relative;
+    max-width: 1440px;
+    margin: 0 auto;
 }
 .navbar {
     padding-left: 70px;
@@ -54,7 +60,7 @@
     column-gap: 7px;
 }
 .top-panel-right-bg {
-    position: fixed;
+    position: absolute;
     width: 532px;
     height: 489px;
     right: 0;
@@ -90,6 +96,7 @@ h2 {
     line-height: 160%;
     color: #3E497A;
     max-width: 601px;
+    margin-bottom: 32px;
 }
 .gazel {
     width: 640px;
@@ -100,21 +107,90 @@ h2 {
     margin-right: 88px;
     position: relative;
 }
-.dialogue-wrapper {
-    background-image: url("../images/Union-1.png");
+.dialogue-wrapper-left {
     width: 138px;
     height: 80px;
     position: absolute;
     top: 13px;
     right: 464px;
+    background-image: url("../images/dialogue-bg-left.png");
 }
-.dialogue-text {
-    margin-left: 17px;
+.dialogue-wrapper-center {
+    width: 100px;
+    height: 82px;
+    position: absolute;
+    top: -83px;
+    right: 240px;
+    background-image: url("../images/dialogue-bg-center.png");
+}
+.dialogue-wrapper-right {
+    width: 140px;
+    height: 80px;
+    position: absolute;
+    top: -58px;
+    right: -17px;
+    background-image: url("../images/dialogue-bg-right.png");
+}
+
+.dialogue-text-left {
     margin-top: 16px;
     font-family: 'Montserrat', sans-serif;
     font-style: normal;
     font-weight: 600;
     font-size: 24px;
+    text-align: center;
     line-height: 29px;
     color: #FFFFFF;
+}
+.dialogue-text-center {
+    margin-top: 20px;
+    font-family: 'Montserrat', serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 90%;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: #FBD64E;
+}
+.dialogue-text-right {
+    margin-top: 9px;
+    font-family: 'Montserrat', serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 90%;
+    text-align: center;
+    color: #FBD64E;
+}
+.order-button {
+    width: 140px;
+    height: 42px;
+    filter: drop-shadow(0px 4px 5px rgba(0, 0, 0, 0.1));
+    background: linear-gradient(180deg, #3E497A 0%, #5563A2 100%);
+    border-radius: 5px;
+    text-decoration: none;
+}
+.order-button-img {
+    width: 24px;
+    height: 24px;
+    margin-left: 12px;
+}
+.order-button-text {
+    font-family: 'Montserrat', serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 22px;
+    color: #FFFFFF;
+    margin-left: 5px;
+}
+.order-phone-number {
+    margin-left: 16px;
+    font-family: 'Montserrat', serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 29px;
+    color: #3E497A;
 }
