--- a/styles/top-panel.css
+++ b/styles/top-panel.css
@@ -39,6 +39,7 @@ body {
 }
 .top-panel {
     padding-top: 35px;
+    padding-bottom: 27px;
     position: relative;
     max-width: 1440px;
     margin: 0 auto;
@@ -82,7 +83,7 @@ h1 {
     font-style: normal;
     font-weight: 800;
     font-size: 48px;
-    line-height: 59px;
+    line-height: 49px;
     color: #21325E;
     margin-top: 28px;
     margin-bottom: 40px;
@@ -97,6 +98,7 @@ h2 {
     color: #3E497A;
     max-width: 601px;
     margin-bottom: 32px;
+    margin-top: 0;
 }
 .gazel {
     width: 640px;
