--- a/styles/services-panel.css
+++ b/styles/services-panel.css
@@ -3,6 +3,8 @@
     border-radius: 20px;
     padding-top: 32px;
     padding-bottom: 32px;
+    max-width: 1440px;
+    margin: 0 auto;
 }
 .services-header {
     font-family: 'Montserrat', serif;
@@ -10,5 +12,101 @@
     font-weight: 700;
     font-size: 36px;
     line-height: 44px;
+    color: #FFFFFF;
+}
+.service-card {
+    width: 299px;
+    height: 230px;
+    filter: drop-shadow(0px 4px 5px rgba(0, 0, 0, 0.1));
+    background-image: url("../images/service-card-bg.png");
+    margin: 0 auto;
+    position: relative;
+}
+.splide {
+    max-width: 1012px;
+    margin: 30px auto;
+}
+.splide__arrow--prev {
+    background: url("../images/back-button.png") !important;
+    width: 16px !important;
+    height: 28px !important;
+}
+.splide__arrow--next {
+    background: url("../images/next-button.png") !important;
+    width: 16px !important;
+    height: 28px !important;
+}
+.service-card-distance {
+    position: absolute;
+    left: 0.33%;
+    right: 0%;
+    top: 6.96%;
+    bottom: 81.3%;
+
+    font-family: 'Montserrat', serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 22px;
+    text-align: center;
+
+    /* Light-Blue */
+
+    color: #3E497A;
+
+    opacity: 0.7;
+}
+.service-card-type {
+    position: absolute;
+    left: 0.33%;
+    right: 0%;
+    top: 17.39%;
+    bottom: 70.87%;
+
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 29px;
+    text-align: center;
+
+    /* Dark-blue */
+
+    color: #21325E;
+}
+.service-card-text {
+    position: absolute;
+    left: 0.33%;
+    right: 0%;
+    top: 39.57%;
+    bottom: 34.78%;
+
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 21px;
+    text-align: center;
+
+    /* Light-Blue */
+
+    color: #3E497A;
+}
+.service-card-cost {
+    position: absolute;
+    left: 38.87%;
+    right: 39.2%;
+    top: 82.17%;
+    bottom: 5.22%;
+
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 29px;
+    text-align: center;
+
+    /* Clear White */
+
     color: #FFFFFF;
 }
