--- a/styles/services-panel.css
+++ b/styles/services-panel.css
@@ -103,6 +103,8 @@
 }
 .services-button-container {
     column-gap: 16px;
+    row-gap: 10px;
+    padding: 0 10px;
 }
 .suggest-button {
     width: 286px;
@@ -112,11 +114,24 @@
     filter: drop-shadow(0px 4px 5px rgba(0, 0, 0, 0.1));
     text-decoration: none;
 }
+
 .boxes {
-    position: absolute;
     width: 662px;
     height: 460px;
+}
+
+@media screen and (max-width: 1200px) {
+    .boxes {
+        width: 365px;
+        height: 352px;
+    }
+}
+
+.boxes-wpapper {
+    max-width: 100vw;
+    position: absolute;
     left: 0;
     bottom: 0;
     z-index: 0;
+    overflow: hidden;
 }
