--- a/styles/top-section.css
+++ b/styles/top-section.css
@@ -1,5 +1,4 @@
 .logo-container {
-    width: 126px;
     height: 38px;
     text-decoration: none;
 }
@@ -34,18 +33,16 @@
     color: #21325E;
     padding: 0 !important;
 }
-.top-panel {
+.top-section {
     padding-top: 35px;
     padding-bottom: 27px;
     position: relative;
 }
 .navbar {
-    padding-left: 70px;
-    padding-right: 70px;
-    padding-top: 0;
-    padding-bottom: 0;
+    padding: 0 70px;
     height: 40px;
 }
+
 .container-fluid, .nav-item {
     padding: 0;
 }
@@ -53,11 +50,6 @@
     column-gap: 28px;
 }
 
-@media screen and (max-width: 1199px) {
-    .navbar-right-container {
-        visibility: collapse;
-    }
-}
 .navbar-right-item {
     text-decoration: none;
     column-gap: 7px;
@@ -73,15 +65,19 @@
     border-radius: 20px 20px 0 0;
     transform: rotate(180deg);
 }
-.top-panel-content {
+
+.top-section-content {
     padding-left: 70px;
     max-width: 100vw;
     overflow: visible;
 }
+
 .left-col {
     margin-top: 108px;
+    margin-bottom: 75px;
 }
-.top-panel-content div {
+
+.top-section-content div {
     padding: 0;
 }
 h1 {
@@ -95,6 +91,7 @@ h1 {
     margin-bottom: 40px;
     margin-right: 10px;
 }
+
 h2 {
     font-family: 'Montserrat', sans-serif;
     font-style: normal;
@@ -216,13 +213,62 @@ h2 {
     color: #3E497A;
 }
 
-@media screen and (max-width: 700px) {
+/* x-small devices (portrait phones, less than 576px) */
+@media screen and (max-width: 575.98px) {
+    .top-section {
+        padding-top: 24px;
+    }
     .order-phone-number {
         visibility: collapse;
     }
+    .gazel {
+        width: 334px;
+        height: 214px;
+    }
+    h1 {
+        font-weight: 800;
+        font-size: 18px;
+        line-height: 22px;
+        margin-bottom: 10px;
+        margin-top: 0;
+    }
+    .navbar {
+        padding-left: 24px;
+        padding-right: 24px;
+    }
+    h2 {
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 17px;
+    }
+    h2 span {
+        display: none;
+    }
+    h2:after {
+        content: "Переезды,\a грузовое такси и\a транспортировка\a крупных грузов\a по Кирову и\a Калужской\a области";
+        white-space: pre-wrap;
+    }
+    .left-col {
+        margin-top: 26px;
+    }
+    .top-panel-right-bg {
+        width: 320px;
+        height: 353px;
+    }
+    .top-section-content {
+        padding-left: 24px;
+    }
+    .navbar-nav {
+        margin-left: 17px;
+    }
 }
 
-@media screen and (max-width: 1199px) {
+/* large devices (desktops, less than 1200px) */
+@media screen and (max-width: 1199.98px) {
+    .navbar-right-container {
+        visibility: collapse;
+        width: 0;
+    }
     .dialogue {
         visibility: collapse;
     }
