--- a/styles/guarantees-section.css
+++ b/styles/guarantees-section.css
@@ -1,11 +1,14 @@
 .guarantees-section {
     padding-top: 57px;
     padding-bottom: 57px;
+    background: linear-gradient(180deg, #F8F6F7 0%, rgba(255, 255, 255, 0.7) 100%);
 }
 .guarantee-card {
     width: 313px;
     height: 79px;
     text-align: left;
+    background: linear-gradient(270deg, #FFFFFF 50%, rgba(255, 255, 255, 0) 100%);
+    border-radius: 0px 3.22738px 3.22738px 0px;
 }
 .guarantee-title {
     font-family: 'Montserrat', serif;
@@ -30,4 +33,30 @@
 }
 .guarantees-section .row {
     row-gap: 65px;
+}
+
+/* x-small devices (portrait phones, less than 576px) */
+@media screen and (max-width: 575.98px) {
+    .guarantee-title {
+        font-size: 12px;
+        line-height: 15px;
+    }
+    .guarantee-text {
+        font-size: 10px;
+        line-height: 12px;
+    }
+    .guarantee-card img {
+        width: 41px;
+        height: 50px;
+    }
+    .guarantee-card {
+        width: 208px;
+        height: 50px;
+    }
+    .guarantees-section .row {
+        row-gap: 17px;
+    }
+    .guarantees-section {
+        padding: 16px 0;
+    }
 }
