--- a/styles/partners-section.css
+++ b/styles/partners-section.css
@@ -3,6 +3,8 @@
     border-radius: 20px 20px 0px 0px;
     padding-top: 32px;
     padding-bottom: 102px;
+    position: relative;
+    z-index: 0;
 }
 .partners-card-with-icon {
     background: #FFFFFF;
@@ -17,6 +19,21 @@
     background: #FFFFFF;
     border-radius: 5px;
     padding: 25px 63px;
+}
+.ellipse1 {
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: -1;
+}
+.ellipse2 {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+}
+.ellipse1-mobile, .ellipse2-mobile {
+    display: none;
 }
 
 @media screen and (max-width: 767px) {
@@ -54,4 +71,25 @@
     margin-bottom: 10px;
     width: 65px;
     height: 55px;
+}
+
+/* x-small devices (portrait phones, less than 576px) */
+@media screen and (max-width: 575.98px) {
+    .ellipse1, .ellipse2 {
+        display: none;
+    }
+    .ellipse1-mobile {
+        display: initial;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: -1;
+    }
+    .ellipse2-mobile {
+        display: initial;
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        z-index: -1;
+    }
 }
