--- a/styles/top-section.css
+++ b/styles/top-section.css
@@ -37,10 +37,12 @@
     padding-top: 35px;
     padding-bottom: 27px;
     position: relative;
+    background: linear-gradient(180deg, #F8F6F7 0%, rgba(255, 255, 255, 0.7) 100%);
 }
 .navbar {
     padding: 0 70px;
     height: 40px;
+    z-index: 1;
 }
 
 .container-fluid, .nav-item {
@@ -60,7 +62,7 @@
     height: 495px;
     right: 0;
     top: -183px;
-    z-index: -1;
+    z-index: 0;
     background: linear-gradient(180deg, #F0C760 0%, #FBD64E 100%);
     border-radius: 20px 20px 0 0;
     transform: rotate(180deg);
@@ -232,6 +234,13 @@ h2 {
         margin-bottom: 10px;
         margin-top: 0;
     }
+    h1:after {
+        content: "Быстрые и\A безопасные\A грузоперевозки";
+        white-space: pre-wrap;
+    }
+    h1 span {
+        display: none;
+    }
     .navbar {
         padding-left: 24px;
         padding-right: 24px;
@@ -240,6 +249,7 @@ h2 {
         font-weight: 500;
         font-size: 14px;
         line-height: 17px;
+        margin-bottom: 12px;
     }
     h2 span {
         display: none;
@@ -250,6 +260,7 @@ h2 {
     }
     .left-col {
         margin-top: 26px;
+        margin-bottom: 0;
     }
     .top-panel-right-bg {
         width: 320px;
@@ -260,6 +271,38 @@ h2 {
     }
     .navbar-nav {
         margin-left: 17px;
+    }
+
+    .top-panel-right-bg {
+        width: 113px;
+        height: 285px;
+    }
+    .gazel {
+        object-fit: cover;
+        object-position: left;
+    }
+    .gazel-wrapper {
+        margin-left: -100px;
+        width: 220px;
+        height: 214px;
+    }
+    .right-col {
+        display: flex;
+        justify-content: end;
+    }
+    .order-button-text {
+        font-size: 11.5714px;
+        line-height: 14px;
+        margin-left: 3px;
+    }
+    .order-button {
+        width: 90px;
+        height: 27px;
+    }
+    .order-button-img {
+        width: 15.43px;
+        height: 15.43px;
+        margin-left: 8px;
     }
 }
 
