--- a/styles/index.css
+++ b/styles/index.css
@@ -33,3 +33,28 @@
     color: #21325E;
     margin: 0;
 }
+
+/* x-small devices (portrait phones, less than 576px) */
+@media screen and (max-width: 575.98px) {
+    footer {
+        padding-top: 11px !important;
+        padding-bottom: 11px !important;
+    }
+    .modal-content {
+
+    }
+    .modal-title {
+        font-size: 14px;
+        line-height: 17px;
+        margin-top: 0 !important;
+    }
+    .modal-body {
+        padding: 10px 23px 23px 23px;
+        font-size: 10px;
+        line-height: 12px;
+    }
+    .modal-body h6 {
+        font-size: 10px;
+        line-height: 12px;
+    }
+}
