--- a/styles/guarantees-section.css
+++ b/styles/guarantees-section.css
@@ -1,7 +1,8 @@
 .guarantees-section {
-    padding-top: 57px;
+    padding-top: 73px;
     padding-bottom: 57px;
     background: linear-gradient(180deg, #F8F6F7 0%, rgba(255, 255, 255, 0.7) 100%);
+    margin-top: -16px;
 }
 .guarantee-card {
     width: 313px;
@@ -57,6 +58,6 @@
         row-gap: 17px;
     }
     .guarantees-section {
-        padding: 16px 0;
+        padding: 32px 0 16px 0;
     }
 }
