--- a/styles/top-section.css
+++ b/styles/top-section.css
@@ -219,6 +219,7 @@ h2 {
 @media screen and (max-width: 575.98px) {
     .top-section {
         padding-top: 24px;
+        padding-bottom: 24px;
     }
     .order-phone-number {
         visibility: collapse;
@@ -229,26 +230,29 @@ h2 {
     }
     h1 {
         font-weight: 800;
-        font-size: 18px;
-        line-height: 22px;
+        font-size: 24px;
+        line-height: 29px;
         margin-bottom: 10px;
         margin-top: 0;
+        z-index: 1000;
+        position: relative;
     }
     h1:after {
         content: "Быстрые и\A безопасные\A грузоперевозки";
         white-space: pre-wrap;
+        z-index: 1000;
     }
     h1 span {
         display: none;
     }
     .navbar {
-        padding-left: 24px;
-        padding-right: 24px;
+        padding-left: 28px;
+        padding-right: 28px;
     }
     h2 {
         font-weight: 500;
-        font-size: 14px;
-        line-height: 17px;
+        font-size: 16px;
+        line-height: 20px;
         margin-bottom: 12px;
     }
     h2 span {
@@ -259,36 +263,34 @@ h2 {
         white-space: pre-wrap;
     }
     .left-col {
-        margin-top: 26px;
+        margin-top: 14px;
         margin-bottom: 0;
     }
-    .top-panel-right-bg {
-        width: 320px;
-        height: 353px;
-    }
     .top-section-content {
-        padding-left: 24px;
+        padding-left: 28px;
     }
     .navbar-nav {
         margin-left: 17px;
     }
 
     .top-panel-right-bg {
-        width: 113px;
+        width: 97px;
         height: 285px;
+        top: -200px
     }
     .gazel {
-        object-fit: cover;
+        object-fit: contain;
         object-position: left;
+        height: 197px;
     }
     .gazel-wrapper {
-        margin-left: -100px;
-        width: 220px;
-        height: 214px;
+        margin-left: -170px;
+        width: 235px;
     }
     .right-col {
         display: flex;
         justify-content: end;
+        margin-top: 123px;
     }
     .order-button-text {
         font-size: 11.5714px;
@@ -298,6 +300,9 @@ h2 {
     .order-button {
         width: 90px;
         height: 27px;
+    }
+    .order-button-container {
+        display: none !important;
     }
     .order-button-img {
         width: 15.43px;
