--- a/styles/services-section.css
+++ b/styles/services-section.css
@@ -125,6 +125,9 @@
         width: 365px;
         height: 352px;
     }
+    .splide__arrows {
+        display: initial !important;
+    }
 }
 
 .boxes-wpapper {
@@ -138,6 +141,9 @@
 
 .splide__arrow {
     opacity: 1;
+}
+.splide__arrows {
+    display: none;
 }
 
 /* x-small devices (portrait phones, less than 576px) */
