--- a/styles/index.css
+++ b/styles/index.css
@@ -1,7 +1,9 @@
 .layout {
+    /*
     max-width: 1440px;
     margin: 0 auto;
     overflow: hidden;
+    */
 }
 .modal-content {
     opacity: 95%;
