--- a/styles/partners-section.css
+++ b/styles/partners-section.css
@@ -1,4 +1,6 @@
 .partners-section {
+    max-width: 1440px;
+    margin: 0 auto;
     background: linear-gradient(180deg, #F0C760 0%, #FBD64E 100%);
     border-radius: 20px 20px 0px 0px;
     padding-top: 32px;
