--- a/styles/partners-section.css
+++ b/styles/partners-section.css
@@ -4,7 +4,7 @@
     background: linear-gradient(180deg, #F0C760 0%, #FBD64E 100%);
     border-radius: 20px 20px 0px 0px;
     padding-top: 32px;
-    padding-bottom: 102px;
+    padding-bottom: 40px;
     position: relative;
     z-index: 0;
 }
@@ -78,37 +78,42 @@
     margin-bottom: 0;
 }
 .offer_terms_text {
+    color: #3E497A;
+    text-decoration: none;
     font-family: 'Montserrat', serif;
     font-style: normal;
     font-weight: 700;
-    font-size: 14px;
-    line-height: 17px;
-    color: #3E497A;
-
-    margin-top: 16px;
-    display: none !important;
+    font-size: 18px;
+    line-height: 22px;
+}
+.offer-terms-container {
+    margin-top: 20px;
 }
 .offer-terms-button {
     background: #FFFFFF;
-    border-radius: 2.81818px;
-    filter: drop-shadow(0px 2.25455px 2.81818px rgba(0, 0, 0, 0.1));
-    width: 90px;
-    height: 24px;
+    border-radius: 5px;
+    filter: drop-shadow(0px 4px 5px rgba(0, 0, 0, 0.1));
+    width: 140px;
+    height: 42px;
     text-decoration: none;
-    margin-top: 12px;
-    display: none !important;
 }
 .offer-terms-button-text {
+    margin-left: 1px    ;
     font-family: 'Montserrat', serif;
     font-style: normal;
     font-weight: 700;
-    font-size: 10.1455px;
-    line-height: 12px;
+    font-size: 18px;
+    line-height: 22px;
     background: linear-gradient(180deg, #3E497A 0%, #5563A2 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
     text-fill-color: transparent;
+}
+.offer-terms-button img {
+    margin-left: 8px;
+    width: 24px;
+    height: 24px;
 }
 
 /* x-small devices (portrait phones, less than 576px) */
