--- a/styles/guarantees-section.css
+++ b/styles/guarantees-section.css
@@ -13,8 +13,9 @@
     width: 313px;
     height: 79px;
     text-align: left;
-    background: linear-gradient(270deg, #FFFFFF 50%, rgba(255, 255, 255, 0) 100%);
+    background: linear-gradient(270deg, #FFFFFF 50%, rgba(255, 255, 255, 0) 100%) right;
     border-radius: 0px 3.22738px 3.22738px 0px;
+    background-size: 282px 79px;
 }
 .guarantee-title {
     font-family: 'Montserrat', serif;
@@ -43,6 +44,15 @@
 
 /* x-small devices (portrait phones, less than 576px) */
 @media screen and (max-width: 575.98px) {
+    .guarantee-card.flex-row {
+        background: linear-gradient(270deg, #FFFFFF 50%, rgba(255, 255, 255, 0) 100%) right;
+    }
+    .guarantee-card.flex-row.flex-row-reverse {
+        background: linear-gradient(270deg, rgba(255, 255, 255, 0) 50%, #FFFFFF 100%) left;
+    }
+    .guarantees-section__wrapper {
+        background: none;
+    }
     .guarantee-title {
         font-size: 18px;
         line-height: 22px;
