--- a/styles/partners-section.css
+++ b/styles/partners-section.css
@@ -67,12 +67,12 @@
     color: #21325E;
     margin-left: 14px;
 }
-.partners-card-with-icon img {
-    margin-left: 14px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    width: 65px;
-    height: 55px;
+.partners-card-with-icon svg {
+    margin-left: 21px;
+    margin-top: 19px;
+    margin-bottom: 19px;
+    width: 50px;
+    height: 36px;
 }
 .partners-card-bottom-text p {
     margin-bottom: 0;
@@ -146,9 +146,12 @@
         row-gap: 10px;
         --bs-gutter-y: 0;
     }
-    .partners-card-with-icon img {
+    .partners-card-with-icon svg {
         width: 40px;
         height: 29px;
+        margin-left: 17px;
+        margin-top: 15px;
+        margin-bottom: 15px;
     }
     .partners-card-text {
         font-size: 16px;
